2009-06-17  Lluis Sanchez Gual  <lluis@novell.com>

	* PyBinding.sln: Remove obsolete extension.

2009-04-15  Lluis Sanchez Gual  <lluis@novell.com>

	* configure: Bump MD version.

2009-02-26  Lluis Sanchez Gual  <lluis@novell.com>

	* PyBinding.sln: Flush.

2009-02-25  Michael Hutchinson  <mhutchinson@novell.com>

	* PyBinding.sln: Set policies. Remove unused name attribute.

2009/02/06  Lluis Sanchez Gual  <lluis@novell.com>

 * PyBinding.sln: Add missing file.

2009/02/06  Lluis Sanchez Gual  <lluis@novell.com>

 * PyBinding.mds: Migrated to MSBuild file format.

2009/02/03  Lluis Sanchez Gual  <lluis@novell.com>

 * configure: Bump MD version.

2009/02/03  Lluis Sanchez Gual  <lluis@novell.com>

 * PyBinding.mds: Flush.

2008-11-05  Lluis Sanchez Gual  <lluis@novell.com>

	* configure:
	* PyBinding/Resources/PyBinding.addin.xml: Bump MD version.

2008-11-04  Michael Hutchinson  <mhutchinson@novell.com>

	* PyBinding/Resources/PyBinding.addin.xml: Track movement of parser 
	  extension point.

2008-10-17  Michael Hutchinson  <mhutchinson@novell.com>

	* PyBinding/Makefile: Fix install path.

2008-10-16  Michael Hutchinson  <mhutchinson@novell.com>

	* configure: Fix tarball name.

2008-10-10  Michael Hutchinson  <mhutchinson@novell.com>

	* PyBinding/PyBinding.Gui/PythonEditorIndentation.cs: Don't break the 
	  text editor extension chain for non-python files.

2008-10-09  Christian Hergert  <chris@dronelabs.com>

	* PyBinding/PyBinding.Gui/PythonEditorIndentation.cs: Only indent if
	the file is python.

2008-10-09  Michael Hutchinson  <mhutchinson@novell.com>

	* PyBinding/PyBinding.Gui/PythonEditorCompletion.cs:
	* PyBinding/PyBinding.Completion/PythonCompletionDataProvider.cs: Track
	APIs.

	* PyBinding/Makefile:
	* PyBinding/PyBinding.mdp: Updated.

2008-10-09  Christian Hergert  <chris@dronelabs.com>

	* PyBinding/PyBinding.Parser.Dom/PythonParsedDocument.cs:
	* PyBinding/PyBinding/PythonHelper.cs: Handle null/empty directories and
	filenames.
