@@ -190,6 +190,9 @@
       <LogicalName>BasicScriptPySourceFile.xft.xml</LogicalName>
     </EmbeddedResource>
     <EmbeddedResource Include="PyBinding.addin.xml" />
+    <EmbeddedResource Include="Resources\EmptyDjangoProject.xpt.xml">
+      <LogicalName>EmptyDjangoProject.xpt.xml</LogicalName>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
